# espup

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  test.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yaml  build.yaml  cd.yaml  changelog.yaml  ci.yaml  gh_test.yaml
src/: chip.rs  cli.rs  completion_shell.rs  config.rs  emoji.rs  env.rs  error.rs  espidf.rs  gcc_toolchain.rs  host_triple.rs  idf.rs  lib.rs  llvm_toolchain.rs  main.rs  package.rs  rust_toolchain.rs  shell.rs  targets.rs  toolchain.rs  utils.rs
src/env/: env.bat  env.fish  env.ps1  env.sh  mod.rs  shell.rs  unix.rs  windows.rs
src/toolchain/: espidf.rs  gcc.rs  gcc_toolchain.rs  llvm.rs  llvm_toolchain.rs  mod.rs  rust.rs  rust_toolchain.rs
tests/: integration.rs  integration_test.rs
