[package]
name = "espup"
version = "0.16.0"
authors = ["Sergio Gasquez Arcos <sergio.gasquez@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/esp-rs/espup"
description = """
Tool for installing and maintaining Espressif Rust ecosystem.
"""
keywords = ["cli", "embedded", "esp", "esp-rs", "xtensa"]
categories = ["command-line-utilities", "development-tools", "embedded"]
rust-version = "1.85.0"

[dependencies]
async-trait          = "0.1.89"
bytes                = "1.10.1"
clap                 = { version = "4.5.48", features = ["derive", "env"] }
clap_complete        = "4.5.58"
clap_complete_nushell = "4.5.8"
directories          = "6.0.0"
env_logger           = "0.11.8"
flate2               = "1.1.2"
guess_host_triple    = "0.1.5"
indicatif            = "0.18.0"
indicatif-log-bridge = "0.2.3"
lazy_static          = "1.5.0"
log                  = "0.4.28"
miette               = { version = "7.6.0", features = ["fancy"] }
regex                = "1.11.3"
reqwest              = { version = "0.12.23", features = ["blocking", "socks", "stream"] }
retry                = "2.1.0"
serde_json           = "1.0.145"
strum                = { version = "0.27.2", features = ["derive"] }
tar                  = "0.4.44"
tempfile             = "3.23.0"
thiserror            = "2.0.16"
tokio                = { version = "1.47.1", features = ["full"] }
tokio-retry          = "0.3.0"
tokio-stream         = "0.1.17"
update-informer      = "1.3.0"
xz2                  = "0.1.7"
zip                  = "5.1.1"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.73", features = ["vendored"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
winapi = { version = "0.3.9", features = ["winuser"] }

[dev-dependencies]
assert_cmd = "2.0.17"

[package.metadata.binstall]
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"

[profile.release]
lto   = "thin"
strip = true
