[package]
name = "espup"
version = "0.17.0"
authors = ["Sergio Gasquez Arcos <sergio.gasquez@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/esp-rs/espup"
description = """
Tool for installing and maintaining Espressif Rust ecosystem.
"""
keywords = ["cli", "embedded", "esp", "esp-rs", "xtensa"]
categories = ["command-line-utilities", "development-tools", "embedded"]
rust-version = "1.88.0"

[dependencies]
async-trait          = "0.1.89"
bytes                = "1.11.1"
clap                 = { version = "4.6.1", features = ["derive", "env"] }
clap_complete        = "4.6.2"
clap_complete_nushell = "4.6.0"
directories          = "6.0.0"
env_logger           = "0.11.10"
flate2               = "1.1.9"
guess_host_triple    = "0.1.5"
indicatif            = "0.18.4"
indicatif-log-bridge = "0.2.3"
lazy_static          = "1.5.0"
log                  = "0.4.29"
miette               = { version = "7.6.0", features = ["fancy"] }
regex                = "1.12.3"
reqwest              = { version = "0.13.2", features = ["blocking", "socks", "stream"] }
retry                = "2.2.0"
serde_json           = "1.0.149"
strum                = { version = "0.28.0", features = ["derive"] }
tar                  = "0.4.45"
tempfile             = "3.27.0"
thiserror            = "2.0.18"
tokio                = { version = "1.52.1", features = ["full"] }
tokio-retry2         = "0.9.1"
tokio-stream         = "0.1.18"
update-informer      = "1.3.0"
xz2                  = "0.1.7"
zip                  = "8.5.1"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.77", features = ["vendored"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"
winapi = { version = "0.3.9", features = ["winuser"] }

[dev-dependencies]
assert_cmd = "2.2.0"

[package.metadata.binstall]
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"

[profile.release]
lto   = "thin"
strip = true
